Fixed padding issues with buttons on smaller screens

--- a/style.css
+++ b/style.css
@@ -111,3 +111,19 @@ a:hover {
 
   overflow: hidden;
 }
+
+/*if the screen is less than 500px wide*/
+@media screen and (max-width: 600px) {
+  .buttons {
+    padding-right: 0%;
+    padding-left: 0%;
+  }
+}
+
+/*if the screen is at least 500px wide*/
+@media screen and (min-width: 601px) {
+  .buttons {
+    padding-right: 10%;
+    padding-left: 10%;
+  }
+}
